[gd_scene load_steps=3 format=3 uid="uid://b6aj7dlcr2mcw"]

[ext_resource type="Script" uid="uid://c1cq3bpg3vlgl" path="res://ui/install_server.gd" id="1_k7uw7"]
[ext_resource type="Script" uid="uid://ck24lr58wp1ak" path="res://ui/label_open_url.gd" id="2_dhhb1"]

[node name="InstallServer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k7uw7")

[node name="Description" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -222.0
offset_top = 56.0
offset_right = 222.0
offset_bottom = 204.0
grow_horizontal = 2
bbcode_enabled = true
text = "Hollow Buddy can hook into Hollow Knight to get extra items and stat boosts with [url=https://github.com/fifty-six/Scarab/releases]Scarab[/url].

More detailed instructions are available in the [url=./README.md]README[/url] that comes with Hollow Buddy."
script = ExtResource("2_dhhb1")

[node name="Grid" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -219.0
offset_top = -33.0
offset_right = 219.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="StepOne" type="Label" parent="Grid"]
layout_mode = 2
text = "1. Install the Mod API"

[node name="Install" type="Button" parent="Grid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Download Scarab"

[node name="StepTwo" type="Label" parent="Grid"]
layout_mode = 2
text = "2. Select Mods folder"

[node name="ModsDir" type="HBoxContainer" parent="Grid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="Grid/ModsDir"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Mods Directory"

[node name="Button" type="Button" parent="Grid/ModsDir"]
layout_mode = 2
text = "Browse"

[node name="StepThree" type="Label" parent="Grid"]
layout_mode = 2
text = "3. Install BuddyServer"

[node name="ServerInstall" type="Button" parent="Grid"]
layout_mode = 2
text = "Install Server"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
size = Vector2i(1280, 720)
file_mode = 2
access = 2
